# progressive-desktop

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  DREAM.md  README.md  code_map.json
.github/workflows/: build.yml  ci.yml
cmake/: progressive_native.cmake
docs/: phase1.md  phase2.md
resources/: resources.qrc
scripts/: audit-modules.py  audit_modules.py  build-pt2.sh  build.sh  gen_code_map.sh  pull.sh
src/: main.cpp
src/core/: account_info.hpp  crash_handler.hpp  debug_log.hpp  fast_sync.cpp  fast_sync.hpp  http_client.cpp  http_client.hpp  json_utils.cpp  json_utils.hpp  matrix_client.cpp  matrix_client.hpp  memory_stats.cpp  memory_stats.hpp  session_store.cpp  session_store.hpp  sync_engine.cpp  sync_engine.hpp  thread_pool.cpp  thread_pool.hpp  utils.hpp  version.h.in
src/core/crypto/: decryptor.cpp  decryptor.hpp  megolm_store.cpp  megolm_store.hpp  olm_account.cpp  olm_account.hpp
src/ui/: auth_handler.hpp  chat_view.cpp  chat_view.hpp  e2ee_init_handler.hpp  emoji_picker.cpp  emoji_picker.hpp  image_loader.cpp  image_loader.hpp  image_viewer_dialog.cpp  login_dialog.cpp  login_dialog.hpp  main_window.cpp  main_window.hpp  message_edit.cpp  message_edit.hpp  network_log_dialog.cpp  network_log_dialog.hpp  notifications.cpp  notifications.hpp  prefs_dialog.cpp  prefs_dialog.hpp  profile_dialog.cpp  profile_dialog.hpp  room_directory_dialog.cpp  room_directory_dialog.hpp  room_handler.cpp  room_handler.hpp  room_list_delegate.cpp  room_list_delegate.hpp  room_list_model.cpp  room_list_model.hpp  room_members_dialog.cpp  room_members_dialog.hpp  room_settings_dialog.cpp  room_view.cpp  room_view.hpp  theme.cpp  theme.hpp  threads_dialog.cpp  timeline_delegate.cpp  (+12 more)
src/ui/chat/: chat_logger.cpp  chat_logger.hpp  chat_view.cpp  chat_view.hpp  emoji_picker.cpp  emoji_picker.hpp  message_edit.cpp  message_edit.hpp
src/ui/dialogs/: image_viewer_dialog.cpp  image_viewer_dialog.hpp  login_dialog.cpp  login_dialog.hpp  network_log_dialog.cpp  prefs_dialog.cpp  room_directory_dialog.cpp  room_settings_dialog.cpp  room_settings_dialog.hpp  threads_dialog.cpp  threads_dialog.hpp
src/ui/handlers/: account_switcher.cpp  account_switcher.hpp  attachment_handler.cpp  attachment_handler.hpp  auth_handler.cpp  auth_handler.hpp  e2ee_init_handler.cpp  e2ee_init_handler.hpp  room_context_menu.cpp  room_context_menu.hpp  room_handler.cpp  room_handler.hpp  session_bootstrap.cpp  session_bootstrap.hpp  slash_command_handler.cpp  slash_command_handler.hpp  sync_response_handler.cpp  sync_response_handler.hpp  thread_handler.cpp  thread_handler.hpp  toolbar_handler.cpp  toolbar_handler.hpp
src/ui/profile/: room_members_dialog.cpp  room_members_dialog.hpp  user_profile_dialog.cpp  user_profile_dialog.hpp
src/ui/room/: room_data_loader.cpp  room_data_loader.hpp  room_store.cpp  room_store.hpp
src/ui/shared/: image_loader.cpp  image_loader.hpp  theme.hpp
src/ui/timeline/: timeline_delegate.cpp  timeline_delegate.hpp  timeline_handlers.cpp  timeline_handlers.hpp  timeline_layout.cpp  timeline_layout.hpp  timeline_model.cpp  timeline_model.hpp  timeline_painter.cpp  timeline_painter.hpp
tests/: bench_sync_parse.cpp  fake_client.hpp  test_gui_phase4.cpp  test_phase1.cpp  test_phase4.cpp  test_visual.cpp
